plugins {
    id 'net.fabricmc.fabric-loom-remap' version '1.14-SNAPSHOT'
    id 'maven-publish'
}

group = project.maven_group
version = project.mod_version

repositories {
    maven {
        name = "ParchmentMC"
        url = "https://maven.parchmentmc.org/"
    }

    maven {
        url "https://maven.shedaniel.me/"
        content {
            includeGroup "me.shedaniel"
            includeGroup "me.shedaniel.cloth"
            includeGroup "dev.architectury"
        }
    }

    maven {
        name = 'Ladysnake Mods'
        url = 'https://maven.ladysnake.org/releases'
    }

    maven {
        name = "Curse Maven"
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }

    maven {
        name = "CurseMaven"
        url = "https://cursemaven.com"
    }

    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }

    maven {
        url = "https://maven.terraformersmc.com/releases/"
        content {
            includeGroup "com.terraformersmc"
        }
    }

    maven {
        name = "ParchmentMC"
        url = "https://maven.parchmentmc.org/"
    }

    maven {
        url = "https://maven.terraformersmc.com/releases/"
        content {
            includeGroup "com.terraformersmc"
        }
    }

    maven {
        url = "https://maven.jamieswhiteshirt.com/libs-release/"
        content {
            includeGroup 'com.jamieswhiteshirt'
        }
    }

    maven {
        name = "Flemmli97"
        url "https://gitlab.com/api/v4/projects/21830712/packages/maven"
    }

    maven { url 'https://jitpack.io' }

    maven {
        url "https://maven.saps.dev/minecraft"
        content {
            includeGroup "dev.ftb.mods"
        }
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.layered() {
        officialMojangMappings()
        parchment("org.parchmentmc.data:parchment-1.20.1:${project.parchment_version}@zip")
    }
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    modImplementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }

    modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }

    include modImplementation("teamreborn:energy:${project.energy_version}")
    include modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
    include modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-item:${project.cca_version}")
    include modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-world:${project.cca_version}")
    include modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-level:${project.cca_version}")

    include modImplementation('com.github.Chocohead:Fabric-ASM:39abe596bc')

    modRuntimeOnly("dev.architectury:architectury-fabric:${project.architectury_version}")
    modImplementation("me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}")

    modImplementation include("com.jamieswhiteshirt:rtree-3i-lite-fabric:${project.rtree_version}")
//    modCompileOnly("io.github.flemmli97:flan:1.18.2-${flan_version}:fabric-api") {
//        transitive = false //Remove this if you want to have all those optional dependencies
//    }
//    modRuntimeOnly("io.github.flemmli97:flan:1.18.2-${flan_version}:fabric") {
//        transitive = false //Remove this if you want to have all those optional dependencies
//    }

    modRuntimeOnly("curse.maven:LazyDFU-433518:3209972")

    modImplementation "curse.maven:cardinal-components-318449:6064429"
    modImplementation "curse.maven:get-off-my-lawn-reserved-572651:4813644"

    modCompileOnly "curse.maven:IPN-495267:3543808"
    modCompileOnly "curse.maven:ftb-chunks-472657:6431734"
    modCompileOnly "curse.maven:ftb-teams-438497:6130783"
    modCompileOnly "curse.maven:ftb-library-438495:7296747"
}

base {
    archivesName.set(project.archives_base_name)
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

loom {
    accessWidenerPath.set(file("src/main/resources/buildinggadgets.accesswidener"))
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

tasks.withType(AbstractArchiveTask) {
    from(project.file("LICENSE"))
}

processResources {
    inputs.property("version", project.version)

    filesMatching("fabric.mod.json") {
        expand("version": project.version)
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }

    repositories {
        maven {
            def releasesRepoUrl = uri("${buildDir}/repos/releases")
            def snapshotsRepoUrl = uri("${buildDir}/repos/snapshots")
            name = "Project"
            url = version.toString().endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
        }
    }
}
